# bevy-game_Dreams

./: Cargo.toml  Overview.md  README.md  index.html  mod.rs  serve.py  wasm.md  zoom.rs
assets/: character.ron
camera/: setup.rs
pkg/: My_Game.d.ts  My_Game.js  My_Game_bg.wasm.d.ts
src/camera/: config.rs  movement.rs
src/characters/: animation.rs  config.rs  input.rs  mod.rs  physics.rs  rendering.rs  spawn.rs
src/collision/: tile_type.rs
src/debug/: map.rs  mod.rs
src/map/: assets.rs  chunks.rs  generate.rs  mod.rs
src/npc/: mod.rs
src/state/: mod.rs
