[package]
name = "My_Game"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
bevy = "0.18"
bevy_common_assets = { version = "0.15.0-rc.1", features = ["ron"] }
serde = { version = "1.0", features = ["derive"] }
pathfinding = "4.15.0"
noise = "0.9.0"
rand = "0.10.0"
bevy_procedural_tilemaps = "0.3.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
