[package]
name = "My_Game"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
bevy = "0.18"
bevy_common_assets = { version = "0.16", features = ["ron"] }
serde = { version = "1", features = ["derive"] }
pathfinding = "4"
rand = "0.10"
bevy_procedural_tilemaps = "0.3"
nalgebra = "0.34"
num-traits = "0.2"
bevy_northstar = "0.6"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
